--- a/laba4.css
+++ b/laba4.css
@@ -37,7 +37,7 @@ header{
   background-color: rgb(51, 51, 51);
   opacity: 0.902;
   box-shadow: 0px 6px 5.64px 0.36px rgba(44, 43, 45, 0.7);
-  width: 31%;
+  width: 355px;
   height: 380px; 
 }
 
@@ -121,10 +121,16 @@ main p{
 }
 
 .phototext{
+	width: 222px;  
 	margin: 0 4%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+.phototext h3, .phototext p{
+	margin-block-start: 0;
+	margin-block-end: 0;
 }
 
 footer{
@@ -145,5 +151,68 @@ footer div{
 	display: flex;
 	text-align: center;
 	color: #ffffff;
+}
 
+@media (max-width: 800px){
+	html{
+		overflow-x: hidden;
+	}
+
+	body{
+		overflow-x: hidden;
+		padding: 0;
+	}
+
+	main p{
+		margin-inline-start: 5%;
+		margin-inline-end: 5%;
+	}
+
+	.lowercontent{
+		flex-wrap: wrap;
+	}
+
+}
+
+@media (max-width: 500px){
+	header{
+		flex-direction: column;
+	}
+
+	.logo{
+		width: 35%;
+		font-size: 20px;
+	}
+}
+
+@media (max-width: 450px){
+	footer{
+		height: auto;
+		flex-direction: column;
+	}
+
+	footer img{
+		width: 200px;
+		align-self: center;
+	}
+
+	footer div{
+		width: 251px;
+		align-self: center;
+	}
+
+	.footerimg{
+		margin-top: 0px;
+		margin-bottom: 27px;
+	}
+}
+
+@media (max-width: 375px){
+	.registerform{
+		width: 100%;
+	}
+
+	.logo{
+		width: 70%;
+	}
 }
